--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "private": true,
   "name": "@otakustay/template-lib-ts",
   "type": "module",
   "version": "1.0.0",
@@ -91,17 +90,21 @@
     "access": "public"
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.5.0",
-    "@commitlint/config-conventional": "^19.5.0",
+    "@commitlint/cli": "^19.6.0",
+    "@commitlint/config-conventional": "^19.6.0",
     "@eslint/js": "^9.15.0",
     "@vitest/coverage-v8": "^2.1.5",
     "dprint": "^0.47.5",
     "eslint": "^9.15.0",
+    "happy-dom": "^15.11.6",
     "husky": "^9.1.7",
-    "typescript": "^5.6.3",
+    "typescript": "^5.7.2",
     "typescript-eslint": "^8.15.0",
     "vite": "^6.0.0",
     "vitest": "^2.1.5",
     "wireit": "^0.14.9"
+  },
+  "dependencies": {
+    "@types/node": "^22.9.3"
   }
 }
